# sys-sage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yaml
.github/actions/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  ci.yml  test.yml
cmake/: FindHWLOC.cmake  Findbackends.cmake  Findnumactl.cmake  Findqdmi.cmake  Findqinfo.cmake
data-sources/: CMakeLists.txt  README.md  hwloc-output.cpp
docs/: Concept.md  Data_Parsers.md  Doxyfile  Installation_Guide.md  check_docs.sh  doc-coverage.info  index.md  python-sys-sage.md  show_undocumented.py  xmlio.md
examples/: CMakeLists.txt  basic_usage.cpp  basic_usage.py  cccbenchplushwloc.cpp  cccbenchplushwloc.py  cpu-frequency.cpp  cpu-frequency.py  custom_attributes.cpp  custom_attributes.py  dynamic_overhead.cpp  gpu-topo-parser.cpp  gpu_matmul.cpp  gpu_matmul.cu  green_score_as_thread.cpp  iqm-test.cpp  larger_topo.cpp  larger_topo.py  matmul.cpp  matmul.py  mt4g-parser.cpp  mt4g-parser.py  nvidia-mig.cpp  nvidia-mig.py  qdmi-test.cpp  sys-sage-benchmarking-attr.py  sys-sage-benchmarking.cpp  sys-sage-benchmarking.py  xml_import.cpp  xml_import.py
examples/custom_parser_musa/: musa_parser.cpp  musa_parser.hpp  use_custom_parser.cpp
examples/example_data/: ampere_gpu_topo.csv
external_interfaces/: nvidia_mig.cpp
pkg/: sys-sage-config.cmake.in
src/: AtomSite.cpp  AtomSite.hpp  CAT_aware.cpp  CMakeLists.txt  Cache.cpp  Cache.hpp  Chip.cpp  Chip.hpp  Component.cpp  Component.hpp  Core.cpp  Core.hpp  CouplingMap.cpp  CouplingMap.hpp  DataPath.cpp  DataPath.hpp  Memory.cpp  Memory.hpp  Node.cpp  Node.hpp  Numa.cpp  Numa.hpp  QuantumBackend.cpp  QuantumBackend.hpp  QuantumGate.cpp  QuantumGate.hpp  Qubit.cpp  Qubit.hpp  Relation.cpp  Relation.hpp  Storage.cpp  Storage.hpp  Subdivision.cpp  Subdivision.hpp  Thread.cpp  Thread.hpp  Topology.cpp  Topology.hpp  cpuinfo.cpp  defines.hpp.in  (+10 more)
src/external_interfaces/: intel_pqos.cpp  nvidia_mig.cpp  proc_cpuinfo.cpp
src/external_interfaces/parsers/: caps-numa-benchmark.cpp  cccbench.hpp
src/parsers/: caps-numa-benchmark.cpp  caps-numa-benchmark.hpp  cccbench.cpp  cccbench.hpp  gpu-topo.cpp  hwloc.cpp  hwloc.hpp  iqm-parser.cpp  iqm-parser.hpp  mt4g.cpp  mt4g.hpp  qdmi-interface.cpp  qdmi-interface.hpp  qdmi-parser.cpp  qdmi-parser.hpp
src/python-bindings/: sys-sage-bindings.cpp
test/: CMakeLists.txt  Dockerfile  README.md  caps-numa-benchmark.cpp  cpuinfo.cpp  datapath.cpp  datapath.py  export.cpp  gpu-topo.cpp  hwloc.cpp  import.cpp  mt4g.cpp  proc_cpuinfo.cpp  raii.cpp  raii.hpp  relation.cpp  relation.py  test.cpp  topology.cpp  topology.py
test/resources/: schema.xml  sys-sage_custom_attributes.xml  sys-sage_sample_output.xml
tmp/: generate_iqm.py  test_data_qexa_100.json  test_data_qexa_16.json  test_data_qexa_1600.json  test_data_qexa_400.json  test_data_qexa_6400.json
